# nyaysetu-legal-ai

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: .env.example  __init__.py  settings.py
scripts/: check_user.js  dump_bc_users.js  list_collections.js
src/app/about/: page.tsx
src/app/affidavit/: page.tsx
src/app/api/blockchain/init-user-key/: route.ts
src/app/api/blockchain/upload/: route.ts
src/app/api/blockchain/view-shared/: route.ts
src/app/api/chat/: route.ts
src/app/api/generate-affidavit/: route.ts
src/app/api/generate-rti/: route.ts
src/app/api/newsletter/subscribe/: route.ts
src/app/api/newsletter/unsubscribe/: route.ts
src/app/blockchain/: page.tsx
src/app/ipcpredication/: page.tsx
src/app/newsletter/: page.tsx
src/app/platformguide/: page.tsx
src/app/profile/: page.tsx
src/components/: AnimatedThemeTogglerDemo.tsx
src/components/footer/: FooterComponent.tsx
src/components/ui/: magic-card.tsx  shiny-button.tsx
src/lib/: auth-client.ts  auth.ts  platform-docs.ts
supplementary-code/blockchain/: Block.py  Blockchain.py  POW_Comparison.py  __init__.py  peer.py  run_app.py  utils.py  verify_sharing.py
supplementary-code/blockchain/app/: __init__.py  views.py
supplementary-code/chatbot/: main.py  quick_start.py  test_api.py
supplementary-code/chatbot/scripts/: build_vectordb.py  clarification.py  context_builder.py  document_selector.py  document_templates.py  intent_router.py  load_documents.py  query_quality.py  rag_pipeline.py  response_formatter.py  retriever.py  system_prompt.py
supplementary-code/draft_generation/: __init__.py  affidavit_generator_backend.py  api.py  database.py  document_engine.py  nyaysetu_main.py  orchestrator.py  rti_generator.py  validation.py
supplementary-code/ipc_prediction/: api.py  build_embedding_texts.py  generate_and_store_embeddings.py  ipc_reasoning_engine.py  llm_instruction_template.py  llm_validation_guard.py  map_titles_from_cleaned.py  purify_full_text.py  retrieve_sections.py  test_enrichment_single.py  test_stability.py  validate_retrieval.py
utils/: __init__.py  file_utils.py  logging_setup.py
